Rename methods parameters to be consistent across all code